--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npx tsc -w",
-    "dev": "npx nodemon"
+    "dev": "npx nodemon",
+    "build": "tsc",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
