--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "moment": "^2.30.1",
+    "nodemon": "^3.1.0",
+    "pino": "^8.19.0",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
